@@ -107,6 +107,8 @@ User visible changes
   + LAST, BUTLAST and NBUTLAST check their list argument for circularity.
   + Different LOAD-TIME-VALUE forms that are EQUAL but not EQ are no longer
     coalesced by COMPILE-FILE.
+  + DEFSETF lambda-lists now support &ENVIRONMENT.
+  + DEFSETF lambda-lists are no longer destructuring lambda-lists.
   + NAMESTRING no longer accepts an optional second argument.
 
 * TRANSLATE-PATHNAME and TRANSLATE-LOGICAL-PATHNAME accept a new keyword
