@@ -1,3 +1,7 @@
+2004-06-13  Bruno Haible  <bruno@clisp.org>
+
+	* setf.tst: 3 new tests for DEFSETF.
+
 2004-06-06  Bruno Haible  <bruno@clisp.org>
 
 	* clos.tst: 206 new method-combination tests.
